src/test/deca/syntax/valid/if.deca
// Description:
//    Programme minimaliste utilisant if.
//
// Resultats:
//   ok
//
// Historique:
//    cree le 13/01/2017
{ 
  int x = 0;
  if (x == 0) {
     println("ok");
     }
}
